--- a/client/src/components/Employee.css
+++ b/client/src/components/Employee.css
@@ -1,12 +1,18 @@
 .employeeRow {
   display: flex;
+  width: 100%;
   margin: 3px 0;
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.5);
 }
 .userName {
-  display: flex;
   padding: 5px 15px;
-  min-width: 100px;
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.statusesWrapper {
+  display: flex;
 }
 .employeeStatus {
   position: relative;
